<resources>
    <string name="app_name">TallerMaterial_Motos</string>
    <string name="action_settings" translatable="false">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>

    <string name="moto">Motocicleta</string>
    <string name="crear_moto">Crear Motocicleta</string>
    <string name="modelo">Modelo</string>
    <string name="marca">Marca</string>
    <string name="placa">Placa</string>
    <string name="guradar">GUARDAR</string>
    <string name="limpiar">LIMPIAR</string>
    <string name="guardado_exitosamente">Motocicleta guardada éxitosamente</string>
    <string name="Eliminar">Eliminar</string>
    <string name="seleccionar_foto">Seleccione la foto de la Motocicleta</string>
    <string name="selec_foto_val">Debe seleccionar una foto</string>
    <string name="digitar_modelo">Digite el modelo</string>
    <string name="digitar_marca">Digite la marca</string>
    <string name="digitar_placa">Digite la la placa</string>
    <string name="eliminar_moto">Eliminar Motocicleta</string>
    <string name="mensaje_advertencia">¿Está seguro de que desea eliminar esta motocicleta?</string>
    <string name="si">SI</string>
    <string name="no">NO</string>

</resources>